semantic/src/test_cases/bad/test2.cl
(* No Main class *)

class A {
    a : Int;
};
